src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <description>Unique External ID from Membership Database. Will be deprecated later.</description>
        <inlineHelpText>Unique External ID from Membership Database. Will be deprecated later.</inlineHelpText>
        <label>Customer ID</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Membership_ID__c</fullName>
        <description>Unique Membership ID</description>
        <displayFormat>DCMSS-{000000}</displayFormat>
        <inlineHelpText>Unique Membership ID</inlineHelpText>
        <label>Membership ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Spouse_Name__c</fullName>
        <description>Spouse Name - Wife or Husband name apart from the Primary Member Name</description>
        <inlineHelpText>Spouse Name - Wife or Husband name apart from the Primary Member Name</inlineHelpText>
        <label>Spouse Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>